--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,1 +1,34 @@
 @import "bootstrap";
+* {
+	margin:0;
+	padding:0;
+}
+.background-login{
+	background-image: url(bg.jpg);
+	width: 100%;
+	height:800px;
+	background-size:cover;
+}
+.login{
+	width: 30%;
+	background-color: rgba(0,0,0,0.5) !important;
+	height: 300px;
+	margin: auto;
+	margin-top: 250px;
+	border-radius: 15px
+}
+
+.login > h1 {
+	color: #fff;
+	padding-top: 12px;
+}
+
+.input {
+	width:90%;
+	margin:auto;
+	text-align: center;
+	margin-bottom: 3px;
+}
+.form-group{
+	margin-top: 1.5rem;
+}
