--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,44 +1,75 @@
 @import "bootstrap";
+@import "font-awesome";
 * {
-	margin:0;
-	padding:0;
+margin:0;
+padding:0;
 }
 .background-login{
-	background-image: url(bg.jpg);
-	width: 100%;
-	height:800px;
-	background-size:cover;
+background-image: url(bg.jpg);
+width: 100%;
+height:800px;
+background-size:cover;
 }
 .login{
-	width: 30%;
-	background-color: rgba(0,0,0,0.5) !important;
-	height: 300px;
-	margin: auto;
-	margin-top: 250px;
-	border-radius: 15px
+width: 30%;
+background-color: rgba(0,0,0,0.5) !important;
+height: 300px;
+margin: auto;
+margin-top: 250px;
+border-radius: 15px
 }
-
 .login > h1 {
-	color: #fff;
-	padding-top: 12px;
+color: #fff;
+padding-top: 12px;
 }
-
 .input {
-	width:90%;
-	margin:auto;
-	text-align: center;
-	margin-bottom: 3px;
+width:90%;
+margin:auto;
+text-align: center;
+margin-bottom: 3px;
 }
 .form-group{
-	margin-top: 1.5rem;
+margin-top: 1.5rem;
 }@media (min-width: 576px)
 {
 .col-sm-10 {
-    flex: 0 0 83.3333333333%;
-     max-width: 100%; 
+flex: 0 0 83.3333333333%;
+max-width: 100%;
 }
 }
 .form-group {
-     margin-top: 0rem; 
+margin-top: 0rem;
+}
+img.img {
+height: 9em;
+width: 9em;
+border-radius: 5em;
+}
+.user-actions
+{
+text-align: center;
+}
+form#edit_user_1 {
+    margin-top: 5em;
 }
 
+.image-upload > input
+{
+   display: none;
+}
+.image-upload > label{
+  cursor:pointer;
+}
+i.fa.fa-exchange {
+    position: absolute;
+    top: 25;
+    transform: translate(45%, 0%);
+    top: 23%;
+    /* font-size: smaller; */
+    color: rgba(255, 255, 255, 0.37);
+    /* size: landscape; */
+    font-size: 5em;
+    /* margin: 0 auto; */
+    /* text-shadow: 1px 4px 1px; */
+    height: wi;
+}
