--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,11 +1,11 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#"><img src="assets/Vinova_Logo.png"></img></a>
+  <a class="navbar-brand" href="#"><%= image_tag("Vinova_Logo.png", :alt => "rss feed") %></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav ml-auto">
-       
+
         <li class="nav-item active">
           <a class="nav-link" href="#">Daily Working <span class="sr-only">(current)</span></a>
         </li>
@@ -15,11 +15,12 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" href="#"></a>
+            <%= link_to "Đăng Nhập", login_path,class: "dropdown-item" %>
             <a class="dropdown-item" href="#">Another action</a>
             <a class="dropdown-item" href="#">Something else here</a>
           </div>
         </li>
-     
+
     </ul>
   </div>
 </nav>
