--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -7,23 +7,38 @@
     </ul>
   </div>
 <% end %>
-<div class="row">
-  <div class="col-lg-6 col-md-12 col-sm-12 m-auto">
-    <%= form_for @user do |f| %>
-      <div class="form-group ">
-          <%= f.label :username, class:"h4" %> <br/>
-          <%= f.text_field :username, class:"form-control", placeholder:"Enter username" %>
-        </div>
-        <div class="form-group">
-          <%= f.label :email, class:"h4" %> <br/>
-          <%= f.email_field :email, class:"form-control", placeholder:"Enter email" %>
-        </div>
-        <div class="form-group ">
-          <%= f.label :password, class:"h4" %> <br/>
-          <%= f.password_field :password, class:"form-control", placeholder:"Enter password" %>
-        </div>
-        
-        <%= f.submit(@user.new_record? ? "Sign up" : "Update account", class:"btn btn-dark ml-auto") %>
-    <% end %>
+<style media="screen">
+  @media only screen and (max-width: 600px) {
+   body {
+     background-color: lightblue;
+     text-align: center !important;
+   }
+    input[type=text] { text-align:center }
+    input[type=password] { text-align:center }
+ }
+
+</style>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-12">
+      <div class="col-lg-6 col-md-12 col-sm-12 m-auto pt-5">
+        <%= form_for @user do |f| %>
+          <div class="form-group ">
+              <%= f.label :username, class:"h4" %> <br/>
+              <%= f.text_field :username, class:"form-control",type: "text", placeholder:"Enter username" %>
+            </div>
+            <div class="form-group">
+              <%= f.label :email, class:"h4" %> <br/>
+              <%= f.email_field :email, class:"form-control",type: "text", placeholder:"Enter email" %>
+            </div>
+            <div class="form-group ">
+              <%= f.label :password, class:"h4" %> <br/>
+              <%= f.password_field :password, class:"form-control",type: "password", placeholder:"Enter password" %>
+            </div>
+
+            <%= f.submit(@user.new_record? ? "Sign up" : "Update account", class:"btn btn-dark ml-auto") %>
+        <% end %>
+      </div>
+    </div>
   </div>
 </div>
