--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,25 +1,26 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#"><img src="assets/Vinova_Logo.png"></img></a>
+  <a class="navbar-brand" href="#"><%= image_tag("Vinova_Logo.png", :alt => "rss feed") %></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav ml-auto">
-       
+       <% if logged_in? %>
         <li class="nav-item active">
-          <a class="nav-link" href="#">Daily Working <span class="sr-only">(current)</span></a>
+          <%=link_to 'Daily Working', tasks_path, class: "nav-link" %>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Account
+            Hi! <%= current_user.username %>
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" href="#"></a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
+            <%= link_to 'View Profile', user_path(current_user), class: "dropdown-item" %>
+            <%= link_to 'Edit your account', edit_user_path(current_user), class: "dropdown-item" %>
+            <%= link_to 'Log out', logout_path, method: :delete, class: "dropdown-item" %>
           </div>
         </li>
-     
+     <% end %>
     </ul>
   </div>
 </nav>
