--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -10,11 +10,22 @@
 		<br/>
 		<%= @task.content %>
 		<br/>
-		<%= link_to "Edit task", edit_task_path, class: "btn btn-primary" %>
+		<% if @task.users.any? %>
+		 <% @task.users.each do |user| %>
+			#<%= link_to user[:username], user_path(user) %>, 
+			
+			<% end %>
+		<% end %>
+	
+		<br/>
+		<%= link_to "Edit", edit_task_path, class: "btn btn-md btn-primary" %>
 
-		<%= link_to "Delete this task", task_path(@task), method: :delete %>
+		
+		<%= link_to "Delete", task_path(@task), method: :delete,
 
-		<%= link_to "Back to list task", tasks_path, class: "btn btn-success" %>
+																	data: { confirm: "Are you sure you want to delete the task?"}, 														class: "btn btn-md btn-danger" %>
+
+		<%= link_to "ALL list task", tasks_path, class: "btn btn-md btn-success" %>
         </center>
 </div>
 </div>
