--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,10 @@
-<div class="jumbotron">
-	<div class="container">
-		</br>
-		<div align="center"> <%= image_tag @user.avatar.url ,class: "img" %></div>
-		<h2 align="center">Name: <%= @user.username %></h2>
-		<h2 align="center">Email: <%= simple_format(@user.email) %></h2>
-		<div class="well col-xs-8 col-xs-offset-2">
-			<div class="user-actions">
+<div class="container">
+		<div class="user-bg text-center">
+			<div align="center" class="avatar m-auto"> <%= image_tag @user.avatar.url ,class: "img" %></div>
+			<h2 align="center"> <%= @user.username %></h2>
+			<h2 align="center"> <%= simple_format(@user.email) %></h2>
 				<%= link_to "Edit this user", edit_user_path(@user), class: "btn btn-xs btn-primary" %>
 				<%= link_to "View all user", users_path, class: "btn btn-xs btn-success" %>
-			</div>
 		</div>
+
 	</div>
-</div>
