--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -9,8 +9,10 @@
 				      <th scope="col">Content</th>
 				      <th scope="col">Employees</th>
 				      <th scope="col">-</th>
+				        <% if current_user.admin?%>
 				      <th scope="col">-</th>
 				      <th scope="col">-</th>
+				      <% end %>
 				    </tr>
 				  </thead>
 				<% obj.each do |task| %>
@@ -19,10 +21,15 @@
 				      <th scope="row"><%= task.id %></th>
 				      <td><%= task.taskname %></td>
 				      <td><%= task.content %></td>
-				      <td>Geogre</td>
+				      <td><% task.users.each do |user| %>
+			            #<%= link_to user[:username], user_path(user) %>, 
+		            	<% end %>
+				     </td>
 				      <td> <%= link_to 'Show', task_path(task), class:"btn btn-success btn-md mr-3" %> </td>
+				      <% if current_user.admin?%>
 				      <td> <%= link_to 'Edit', edit_task_path(task), class:"btn btn-primary btn-md mr-3" %> </td>
 					  <td> <%= link_to 'Delete', task_path(task), method: :delete, data: {confirm: "Are you sure?"}, class:"btn btn-danger btn-md" %></td>
+					  <% end %>
 				    </tr>
 				  </tbody>
 				<% end %>
