--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <%= form_for @task , html: { multipart: true } do |f| %>
 <div class="form-group ">
 	<% $s = @task.id  %>
@@ -32,4 +33,5 @@
 	   <% end %>
         <%= a.submit "Delete", class: "btn btn-dark ml-auto" %>
 	<% end %>
+</div>
 </div>
