--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -1,4 +1,4 @@
-
+<div class="container pt-4">
 		<div class="row">
 			<div class="col-12">
 				<table class="table">
@@ -20,14 +20,13 @@
 				      <td><%= task.taskname %></td>
 				      <td><%= task.content %></td>
 				      <td>Geogre</td>
-				      <td> <%= link_to 'Show', task_path(task), class:"btn btn-success btn-md mr-3" %> </td>
-				      <td> <%= link_to 'Edit', edit_task_path(task), class:"btn btn-primary btn-md mr-3" %> </td>
-					  <td> <%= link_to 'Delete', task_path(task), method: :delete, data: {confirm: "Are you sure?"}, class:"btn btn-danger btn-md" %></td>
+				      <td> <%= link_to '', task_path(task), class:"btn btn-success btn-md mr-3 fa fa-eye" %> </td>
+				      <td> <%= link_to '', edit_task_path(task), class:"btn btn-primary btn-md mr-3 fa fa-pencil" %> </td>
+					  <td> <%= link_to '', task_path(task), method: :delete, data: {confirm: "Are you sure?"}, class:"btn btn-danger btn-md fa fa-trash" %></td>
 				    </tr>
 				  </tbody>
 				<% end %>
 				</table>
-				
 			</div>
 		</div>
-
+</div>
