--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,3 +1,4 @@
+<div class="container pt-4">
 <div class="row">
   <div class="col-lg-6 col-md-12 col-sm-12 m-auto">
 	<div align="center">
@@ -5,27 +6,27 @@
      <%= image_tag t.pictrue.url ,class: "imgtask" %>
 	 <% end %>
 	</div>
-	<center>
-		<%= @task.taskname %>
+	<center class="pt-2">
+		<b><%= @task.taskname %></b>
 		<br/>
 		<%= @task.content %>
-		<br/>
+		<br/>	<br/>
+    <p><i class="fa fa-tags" aria-hidden="true"></i> Tag:
 		<% if @task.users.any? %>
 		 <% @task.users.each do |user| %>
-			#<%= link_to user[:username], user_path(user) %>, 
-			
+			 <%= link_to user[:username], user_path(user) %> ·
 			<% end %>
 		<% end %>
-	
-		<br/>
+    </p>
 		<%= link_to "Edit", edit_task_path, class: "btn btn-md btn-primary" %>
 
-		
+
 		<%= link_to "Delete", task_path(@task), method: :delete,
 
 																	data: { confirm: "Are you sure you want to delete the task?"}, 														class: "btn btn-md btn-danger" %>
 
-		<%= link_to "ALL list task", tasks_path, class: "btn btn-md btn-success" %>
+		<%= link_to "All list task", tasks_path, class: "btn btn-md btn-success" %>
         </center>
+</div>
 </div>
 </div>
