--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -25,10 +25,10 @@
 			            #<%= link_to user[:username], user_path(user) %>  &nbsp
 		            	<% end %>
 				     </td>
-				      <td> <%= link_to 'Show', task_path(task), class:"btn btn-success btn-md mr-3" %> </td>
+				      <td> <%= link_to '', task_path(task), class:"btn btn-success btn-md mr-3 fa fa-eye" %> </td>
 				      <% if current_user.admin?%>
-				      <td> <%= link_to 'Edit', edit_task_path(task), class:"btn btn-primary btn-md mr-3" %> </td>
-					  <td> <%= link_to 'Delete', task_path(task), method: :delete, data: {confirm: "Are you sure?"}, class:"btn btn-danger btn-md" %></td>
+				      <td> <%= link_to '', edit_task_path(task), class:"btn btn-primary btn-md mr-3 fa fa-pencil" %> </td>
+					  <td> <%= link_to '', task_path(task), method: :delete, data: {confirm: "Are you sure?"}, class:"btn btn-danger btn-md fa fa-trash" %></td>
 					  <% end %>
 				    </tr>
 				  </tbody>
