--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -15,8 +15,10 @@
 <% if current_user.admin? %>
 	<div class="form-group">
 		<%= f.collection_check_boxes :user_task_ids, User.all, :id, :username do |cb| %>
-		<% cb.label(class: "checkbox-inline input_checkbox mr-3") {cb.check_box(class: "checkbox mr-1") + cb.text} %>
-		<% end %>
+	        <% if !@task.users.find_by(username: cb.text) %>	
+				 <% cb.label(class: "checkbox-inline input_checkbox mr-3") {cb.check_box(class: "checkbox mr-1") + cb.text} %>
+			<% end %>
+	   <% end %>
 	</div>
 <% end %>
 <div class="form-group">
