--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -12,6 +12,9 @@
         <li class="nav-item">
             <%= link_to 'New task', new_task_path, class: "nav-link" %>
         </li>
+        <li class="nav-item">
+            <%= link_to 'User', users_path, class: "nav-link" %>
+        </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Hi! <%= current_user.username %>
           </a>
