update edit task may remove user

--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,45 +1,53 @@
 <div class="container">
-<%= form_for @task , html: { multipart: true } do |f| %>
-<div class="form-group ">
-	<% $s = @task.id  %>
-	<%= f.label :taskname, class: "h4" %> <br/>
-	<%= f.text_field :taskname, class: "form-control", placeholder:"Enter name of task" %>
-</div>
-<div class="form-group">
-	<%= f.label :content, class:"h4" %> <br/>
-	<%= f.text_field :content, class: "form-control", placeholder:"Enter content of task" %>
-</div>
-<div class="form-group">
-	<%= f.file_field :photo, multiple: true, class: "upload-image" %>
-</div>
-<% if current_user.admin? %>
+	<%= form_for @task , html: { multipart: true } do |f| %>
+	<div class="form-group ">
+		<% $s = @task.id  %>
+		<%= f.label :taskname, class: "h4" %> <br/>
+		<%= f.text_field :taskname, class: "form-control", placeholder:"Enter name of task" %>
+	</div>
+	<div class="form-group">
+		<%= f.label :content, class:"h4" %> <br/>
+		<%= f.text_field :content, class: "form-control", placeholder:"Enter content of task" %>
+	</div>
+	<div class="form-group">
+		<%= f.file_field :photo, multiple: true, class: "upload-image" %>
+	</div>
+	<% if current_user.admin? %>
 	<div class="form-group">
 		<%= f.collection_check_boxes :user_task_ids, User.all, :id, :username do |cb| %>
-	        <% if !@task.users.find_by(username: cb.text) %>	
-				 <% cb.label(class: "checkbox-inline input_checkbox mr-3") {cb.check_box(class: "checkbox mr-1") + cb.text} %>
-			<% end %>
-	   <% end %>
+		<% if !@task.users.find_by(username: cb.text) %>
+		<% cb.label(class: "checkbox-inline input_checkbox mr-3") {cb.check_box(class: "checkbox mr-1") + cb.text} %>
+		<% end %>
+		<% end %>
 	</div>
-<% end %>
-<div class="form-group">
-	<%= f.date_field :date,value: Time.now.strftime("%Y-%m-%d"), class: 'form-control' %>
-</div>
-<% if @task.new_record? == false %>
-<% end %>
-<%= f.submit class: "btn btn-dark ml-auto" %>
-<% end %>
-<%= link_to "Back to list tasks", tasks_path, class: "ml-auto" %>
-<% if @task.new_record? == false %>
-<div class="form-group">
-	<%= form_for(@task,as: :delete, url: {action: "destroyimage"}, :method => :DELETE) do |a| %>
-	<%= hidden_field_tag "task[task_id]", "#{@task.id}" %> <!-- tao paramasters -->
-	<%= a.collection_check_boxes :image_ids, @task.images, :id, :pictrue do |cb| %>
-	<% cb.label(class: "checkbox-inline input_checkbox") {cb.check_box(checked: false,class: "checkbox")
-	} + image_tag(cb.text.url ,class: "imgtask")%>
 	<% end %>
-	<%= a.submit "Delete", class: "btn btn-dark ml-auto" %>
+	<div class="form-group">
+		<%= f.date_field :date,value: Time.now.strftime("%Y-%m-%d"), class: 'form-control' %>
+	</div>
+	<%= f.submit class: "btn btn-dark ml-auto" %>
 	<% end %>
-</div>
+	<%= link_to "Back to list tasks", tasks_path, class: "ml-auto" %>
+	<% if @task.new_record? == false %>
+	<div class="form-group">
+		Users Existent <% @task.users.each do |user| %>
+		
+		<div class='alert alert-removeusetask'>
+			<%= link_to "#{user.username}",user_path(user), class: "btn btn-md btn-danger"
+	    	%>
+	    	<%= link_to "x",taskusers_path(:user => user,:task => @task.id), method: :delete, data: {dismiss: "alert", confirm: "Are you sure you want to delete the user?"},class: "btn btn-md btn-danger"
+	    	 %>
+		</div>
+		<% end %>
+	</div>
+	<div class="form-group">
+		<%= form_for(@task,as: :delete, url: {action: "destroyimage"}, :method => :DELETE) do |a| %>
+		<%= hidden_field_tag "task[task_id]", "#{@task.id}" %> <!-- tao paramasters -->
+		<%= a.collection_check_boxes :image_ids, @task.images, :id, :pictrue do |cb| %>
+		<% cb.label(class: "checkbox-inline input_checkbox") {cb.check_box(checked: false,class: "checkbox")
+		} + image_tag(cb.text.url ,class: "imgtask")%>
+		<% end %>
+		<%= a.submit "Delete", class: "btn btn-dark ml-auto" %>
+		<% end %>
+	</div>
 </div>
 <% end %>
-
