--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -1,46 +1,46 @@
 <h1 class="text-center">
-<%= form_tag(tasks_path, :method => "get") do %>
-      <% params[:date] = nil %>
-	   <%= date_field :date, params[:date]%>
-	   <%= submit_tag "Search"%>
-	 <% end %>
+	<%= form_for(:date,as: :get, url: {action: "index"}, :method => :GET) do |a| %>
+	<%= a.date_field :date,value: params[:date] == nil ? Time.now.strftime("%Y-%m-%d") : params[:date][:date] , class: 'form-control-date' %>
+	<%= a.submit "search", class: "btn btn-lg btn-dark ml-auto" %>
+	<% end %>
 </h1>
+
 <div class="container pt-4">
-		<div class="row">
-			<div class="col-12">
-				<table class="table">
-				  <thead class="thead-dark">
-				    <tr>
-				      <th scope="col">#</th>
-				      <th scope="col">Name</th>
-				      <th scope="col">Content</th>
-				      <th scope="col">Employees</th>
-				      <th scope="col">-</th>
-				        <% if current_user.admin?%>
-				      <th scope="col">-</th>
-				      <th scope="col">-</th>
-				      <% end %>
-				    </tr>
-				  </thead>
+	<div class="row">
+		<div class="col-12">
+			<table class="table">
+				<thead class="thead-dark">
+					<tr>
+						<th scope="col">#</th>
+						<th scope="col">Name</th>
+						<th scope="col">Content</th>
+						<th scope="col">Employees</th>
+						<th scope="col">-</th>
+						<% if current_user.admin?%>
+						<th scope="col">-</th>
+						<th scope="col">-</th>
+						<% end %>
+					</tr>
+				</thead>
 				<% obj.each do |task| %>
-				  <tbody>
-				    <tr>
-				      <th scope="row"><%= task.id %></th>
-				      <td><%= truncate(task.taskname, length: 20) %></td>
-				      <td><%= truncate(task.content, length: 20) %></td>
-				      <td><% task.users.each do |user| %>
-			            #<%= link_to user[:username], user_path(user) %>  &nbsp
-		            	<% end %>
-				     </td>
-				      <td> <%= link_to '', task_path(task), class:"btn btn-success btn-md mr-3 fa fa-eye" %> </td>
-				      <% if current_user.admin?%>
-				      <td> <%= link_to '', edit_task_path(task), class:"btn btn-primary btn-md mr-3 fa fa-pencil" %> </td>
-					  <td> <%= link_to '', task_path(task), method: :delete, data: {confirm: "Are you sure?"}, class:"btn btn-danger btn-md fa fa-trash" %></td>
-					  <% end %>
-				    </tr>
-				  </tbody>
+				<tbody>
+					<tr>
+						<th scope="row"><%= task.id %></th>
+						<td><%= truncate(task.taskname, length: 20) %></td>
+						<td><%= truncate(task.content, length: 20) %></td>
+						<td><% task.users.each do |user| %>
+							#<%= link_to user[:username], user_path(user) %>  &nbsp
+							<% end %>
+						</td>
+						<td> <%= link_to '', task_path(task), class:"btn btn-success btn-md mr-3 fa fa-eye" %> </td>
+						<% if current_user.admin?%>
+						<td> <%= link_to '', edit_task_path(task), class:"btn btn-primary btn-md mr-3 fa fa-pencil" %> </td>
+						<td> <%= link_to '', task_path(task), method: :delete, data: {confirm: "Are you sure?"}, class:"btn btn-danger btn-md fa fa-trash" %></td>
+						<% end %>
+					</tr>
+				</tbody>
 				<% end %>
-				</table>
-			</div>
+			</table>
 		</div>
+	</div>
 </div>
