--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -10,6 +10,10 @@
 
 <div class="container">
 	<div class="task-form">
+		<h1 class="text-center">
+			<%= yield(:title) %>
+		</h1>
+		<br/>
 	<%= form_for @task , html: { multipart: true } do |f| %>
 	<div class="input-group mb-3">
 	  <div class="input-group-prepend">
