--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -9,6 +9,10 @@
 <% end %>
 <div class="row">
   <div class="col-lg-6 col-md-12 col-sm-12 m-auto">
+    <h1 class="text-center">
+      <%= yield(:title) %>
+    </h1> 
+    <br/>
     <%= form_for @user do |f| %>
     <div class="form-group ">
       <div align="center">
