update images for task

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,5 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#"><%= image_tag("Vinova_Logo.png", :alt => "rss feed") %></a>
+  <a class="navbar-brand" href="#">
+    <%= link_to raw(image_tag("Vinova_Logo.png", :alt => "rss feed")), tasks_path %>
+      
+    </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
