--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,7 +6,7 @@
 				<div class="user-actions">
 					<div align="center" class="avatar m-auto"> <%= image_tag user.avatar.url ,class: "img" %>
 					</div>
-				Use name: <%= link_to user.username, user_path(user) %>
+				Username: <%= link_to user.username, user_path(user) %>
 			    </br>
 				Email:	  <%= user.email %>
 				</div>
