--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -9,6 +9,10 @@
 <% end %>
 <div class="row">
   <div class="col-lg-6 col-md-12 col-sm-12 m-auto">
+    <h1 class="text-center">
+      <%= yield(:title) %>
+    </h1> 
+    <br/>
     <%= form_for @user do |f| %>
     <div class="form-group ">
       <div align="center">
@@ -25,23 +29,29 @@
       </div>
       </center>
     </div>
-    <div class="form-group ">
-      <%= f.label :username, class:"h4" %> <br/>
-      <%= f.text_field :username, class:"form-control", placeholder:"Enter username" %>
+    <div class="input-group mb-3">
+      <div class="input-group-prepend">
+        <span class="input-group-text" id="basic-addon1"><i class="fa fa-user-o" aria-hidden="true"></i></span>
+      </div>
+      <%= f.text_field :username, class: "form-control", placeholder:"Enter username"%>
     </div>
     <% if @user.new_record? == true %>
-    <div class="form-group">
-      <%= f.label :email, class:"h4" %> <br/>
-      <%= f.email_field :email, class:"form-control", placeholder:"Enter email" %>
+     <div class="input-group mb-3">
+      <div class="input-group-prepend">
+        <span class="input-group-text" id="basic-addon1"><i class="fa fa-envelope-o" aria-hidden="true"></i></span>
+      </div>
+      <%= f.text_field :email, class: "form-control", placeholder:"Enter email"%>
     </div>
     <% end %>
-    <div class="form-group ">
-      <%= f.label :password, class:"h4" %> <br/>
-      <%= f.password_field :password, class:"form-control", placeholder:"Enter password" %>
+   <div class="input-group mb-3">
+      <div class="input-group-prepend">
+        <span class="input-group-text" id="basic-addon1"><i class="fa fa-key" aria-hidden="true"></i></span>
+      </div>
+      <%= f.text_field :password, class: "form-control", placeholder:"Enter password", type: "password" %>
     </div>
     <div class="form-group ">
       <div align="center">
-        <%= f.submit(@user.new_record? ? "Sign up" : "Update account", class:"btn btn-dark ml-auto") %>
+        <%= f.submit(@user.new_record? ? "Sign up" : "Update account", class:"btn btn-lg btn-dark ml-auto") %>
       </div>
     </div>
     <% end %>
