--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,51 +1,40 @@
-<% if @task.errors.any? %>
-<div class="alert alert-danger">
-  <ul>
-    <% @task.errors.full_messages.each do |msg| %>
-    <li><%= msg %></li>
-    <% end %>
-  </ul>
-</div>
-<% end %>
-
 <div class="container">
 	<div class="task-form">
-		<h1 class="text-center">
-			<%= yield(:title) %>
-		</h1>
-		<br/>
-	<%= form_for @task , html: { multipart: true } do |f| %>
-	<div class="input-group mb-3">
-	  <div class="input-group-prepend">
-	    <span class="input-group-text" id="basic-addon1"><i class="fa fa-envelope-o" aria-hidden="true"></i></span>
-	  </div>
-	  	<% $s = @task.id  %>
-	  <%= f.text_field :taskname, class: "form-control", placeholder:"Enter name of task"%>
-	</div>
-	<div class="input-group mb-3">
-	  <div class="input-group-prepend">
-	    <span class="input-group-text" id="basic-addon1"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></span>
-	  </div>
-	  <%= f.text_area :content, class: "form-control", placeholder:"Enter description of task"%>
-	</div>
-	<div class="form-group">
-		<%= f.date_field :date,value: Time.now.strftime("%Y-%m-%d"), class: 'form-control' %>
-	</div>
-	<div class="form-group">
-		<%= f.file_field :photo, multiple: true, class: "upload-image" %>
-	</div>
-	<% if current_user.admin? %>
-	<div class="form-group">
-		<%= f.collection_check_boxes :user_task_ids, User.all, :id, :username do |cb| %>
-		<% if !@task.users.find_by(username: cb.text) %>
-		<% cb.label(class: "checkbox-inline input_checkbox mr-3") {cb.check_box(class: "checkbox mr-1") + cb.text} %>
-		<% end %>
-		<% end %>
+		<%= form_for @task , html: { multipart: true } do |f| %>
+		<div class="input-group mb-3">
+			<div class="input-group-prepend">
+				<span class="input-group-text" id="basic-addon1"><i class="fa fa-envelope-o" aria-hidden="true"></i></span>
+			</div>
+			<% $s = @task.id  %>
+			<%= f.text_field :taskname, class: "form-control", placeholder:"Enter name of task"%>
+		</div>
+		<div class="input-group mb-3">
+			<div class="input-group-prepend">
+				<span class="input-group-text" id="basic-addon1"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></span>
+			</div>
+			<%= f.text_area :content, class: "form-control", placeholder:"Enter description of task"%>
+		</div>
+		<div class="form-group">
+			<%= f.date_field :date,value: Time.now.strftime("%Y-%m-%d"), class: 'form-control' %>
+		</div>
+		<div class="form-group">
+			<%= f.file_field :photo, multiple: true, class: "upload-image" ,id: "imagetsask" %>
+		</div>
 		<div class="form-group">
 			<span id="imagetaskss">
 				
 			</span>
 		</div>
+		<% if current_user.admin? %>
+		<div class="form-group">
+			<%= f.collection_check_boxes :user_task_ids, User.all, :id, :username do |cb| %>
+			<% if !@task.users.find_by(username: cb.text) %>
+			<% cb.label(class: "checkbox-inline input_checkbox mr-3") {cb.check_box(class: "checkbox mr-1") + cb.text} %>
+			<% end %>
+			<% end %>
+			
+		</div>
+		<% end %>
 		<%= f.submit class: "btn btn-primary ml-auto" %>
 		<% end %>
 		<div class="form-group">
@@ -55,8 +44,7 @@
 		<% if @task.new_record? == false %>
 		<div class="form-group">
 			Worker: <% @task.users.each do |user| %>
-			
-			<div class='alert alert-removeusetask'>
+			<div class="alert alert-removeusetask">
 				<%= link_to "#{user.username}",user_path(user), class: "btn btn-md btn-danger"
 				%>
 				<%= link_to "x",taskusers_path(:user => user,:task => @task.id), method: :delete, data: {dismiss: "alert", confirm: "Are you sure you want to delete the user?"},class: "btn btn-md btn-danger"
@@ -74,6 +62,6 @@
 			<%= a.submit "Delete", class: "btn btn-dark ml-auto" %>
 			<% end %>
 		</div>
+		<% end %>
 	</div>
 </div>
-<% end %>
