--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,33 +1,30 @@
 <div class="container pt-4">
-<div class="row">
-  <div class="col-lg-6 col-md-12 col-sm-12 m-auto">
-	<div align="center">
-     <% @task.images.each do |t| %>
-     <%= image_tag t.pictrue.url ,class: "imgtask" %>
-	 <% end %>
-	</div>
-	<center class="pt-2">
-		<b><%= @task.taskname %></b>
-		<br/>
-		<%= @task.content %>
-		<br/>	<br/>
-    <p><i class="fa fa-tags" aria-hidden="true"></i> Tag:
-		<% if @task.users.any? %>
-		 <% @task.users.each do |user| %>
-			 <%= link_to user[:username], user_path(user) %> ·
+	<div class="row">
+		<div class="col-lg-6 col-md-12 col-sm-12 m-auto">
+			<div align="center">
+				<% @task.images.each do |t| %>
+				<%= image_tag t.pictrue.url ,class: "imgtask" %>
+				<% end %>
+			</div>
+			<center class="pt-2">
+			<b><%= @task.taskname %></b>
+			<br/>
+			<%= @task.content %>
+			<br/>	<br/>
+			<p><i class="fa fa-tags" aria-hidden="true"></i> Tag:</p>
+			<% if @task.users.any? %>
+			<% @task.users.each do |user| %>
+			<%= link_to user[:username], user_path(user) %> ·
 			<% end %>
-		<% end %>
-		<br/>
-		<% if ( current_user.admin?) %>
-
-		<%= link_to "Edit", edit_task_path, class: "btn btn-md btn-primary" %>
-
-
-		<%= link_to "Delete", task_path(@task), method: :delete,
-																	data: { confirm: "Are you sure you want to delete the task?"}, 														class: "btn btn-md btn-danger" %>
-		<%= link_to "Back to list task", tasks_path, class: "btn btn-md btn-success" %>
-
-        </center>
-</div>
-</div>
+			<% end %>
+			<br/>
+			<% if ( current_user.admin?) %>
+			<%= link_to "Edit", edit_task_path, class: "btn btn-md btn-primary" %>
+			<%= link_to "Delete", task_path(@task), method: :delete,
+			data: { confirm: "Are you sure you want to delete the task?"}, 														class: "btn btn-md btn-danger" %>
+			<%= link_to "Back to list task", tasks_path, class: "btn btn-md btn-success" %>
+			<% end %>
+			</center>
+		</div>
+	</div>
 </div>
