--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,8 +3,15 @@
 			<div align="center" class="avatar m-auto"> <%= image_tag @user.avatar.url ,class: "img" %></div>
 			<h2 align="center"> <%= @user.username %></h2>
 			<h2 align="center"> <%= simple_format(@user.email) %></h2>
-				<%= link_to "Edit this user", edit_user_path(@user), class: "btn btn-xs btn-primary" %>
-				<%= link_to "View all user", users_path, class: "btn btn-xs btn-success" %>
+				<%= link_to "", users_path, class: "btn btn-lg btn-success fa fa-arrow-circle-left" %>
+				<%= link_to "", edit_user_path(@user), class: "btn btn-lg btn-primary fa fa-pencil" %>
+
+				<% if current_user.admin? %>
+				<%= link_to "", user_path(@user), method: :delete,
+					data: { confirm: "Are you sure you want to delete the user?"},
+					class: "btn btn-lg btn-danger fa fa-trash" %>
+				<% end %>
+
 		</div>
 
 	</div>
