--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -12,9 +12,11 @@
         <li class="nav-item active">
           <%=link_to 'Daily Working', tasks_path, class: "nav-link" %>
         </li>
+        <% if current_user.admin? %>
         <li class="nav-item">
             <%= link_to 'New task', new_task_path, class: "nav-link" %>
         </li>
+        <% end %>
         <li class="nav-item">
             <%= link_to 'User', users_path, class: "nav-link" %>
         </li>
