--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -20,16 +20,25 @@
 		<br/>
 		<% if ( current_user.admin?) %>
 
-		<%= link_to "Edit", edit_task_path, class: "btn btn-md btn-primary" %>
+		<%= link_to "", edit_task_path, class: "btn btn-lg btn-primary fa fa-pencil" %>
 
 
-		<%= link_to "Delete", task_path(@task), method: :delete,
-																	data: { confirm: "Are you sure you want to delete the task?"}, 														class: "btn btn-md btn-danger" %>
-		<%= link_to "Back", tasks_path, class: "btn btn-md btn-success" %>															
+		<%= link_to "", task_path(@task), method: :delete,
+																	data: { confirm: "Are you sure you want to delete the task?"}, 														class: "btn btn-lg btn-danger fa fa-trash" %>
+		<%= link_to "", tasks_path, class: "btn btn-lg btn-success fa fa-arrow-circle-left" %>															
 		<% end %>
 
-
-		<%= link_to "Back to list task", tasks_path, class: "btn btn-md btn-success" %>
+			<% if @task.status == "notstarted" %>
+								 <%= link_to "", change_status_path(:task => @task, :status => "inprogress"), method: :put, data: {dismiss: "alert", confirm: "Are you sure to receive this task?"},class: "btn btn-warning fa fa-thumb-tack"
+	    						 %>
+							<% elsif @task.status == "inprogress" %>
+								<%= link_to "", change_status_path(:task => @task, :status => "done"), method: :put, data: {dismiss: "alert", confirm: "Do you complete your task?"},class: "btn btn-warning fa fa-check-circle-o"
+	    						 %>
+							<% else %>
+								<button type="button" class="btn btn-warning" disabled><span class="fa fa-thumb-tack"></span>
+								</button>
+							<% end %>
+	
 
         </center>
 </div>
