--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 	<h1 align="center">Listing all Users</h1>
 	<% @users.each do |user| %>
-		<div class="col-xs-8 col-xs-offset-2">
+		<div class="col-xs-8 col-xs-offset-2 show-user">
 			<div class="well well-lg">
 				<div class="user-actions">
 					<div align="center" class="avatar m-auto"> <%= image_tag user.avatar.url ,class: "img" %>
@@ -11,11 +11,12 @@
 				Email:	  <%= user.email %>
 				</div>
 				<div class="user-actions">
-					<%= link_to "Edit this user", edit_user_path(user), class: "btn btn-xs btn-primary" %>
+					<%= link_to "", user_path(user), class: "btn btn-lg btn-success fa fa-eye" %>
 					<% if logged_in? && current_user.admin == true then %>
-					<%= link_to "Delete this user", user_path(user), method: :delete,
+					<%= link_to "", edit_user_path(user), class: "btn btn-lg btn-primary fa fa-pencil" %>
+					<%= link_to "", user_path(user), method: :delete,
 					data: { confirm: "Are you sure you want to delete the user?"},
-					class: "btn btn-xs btn-danger" %>
+					class: "btn btn-lg btn-danger fa fa-trash" %>
 					<% end %>
 				</div>
 			</div>
