--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -53,10 +53,12 @@
 			<% end %>
 		</div>
 		<div class="form-group">
+			<% i = 0 %>
 			<% @task.images.each do |image| %>
 			<%= image_tag image ,class: "imgtask" %>
-			<%= link_to "x",images_path(:task => @task.id,:image => image.id), method: :delete, data: {dismiss: "alert", confirm: "Are you sure you want to delete the user?"},class: "btn btn-md btn-danger"
+			<%= link_to "x",images_path(:task => @task.id,:images => i), method: :delete, data: {dismiss: "alert", confirm: "Are you sure you want to delete the user?"},class: "btn btn-md btn-danger"
 			%>
+			<% i = i + 1 %>
 		    </br>
 			<% end %>
 		</div>
