--- a/app/views/comments/_show.html.erb
+++ b/app/views/comments/_show.html.erb
@@ -1,7 +1,11 @@
 <% i = 0 %>
 <%= while i < comments.count do %>
 <div class="media">
-	<%= image_tag User.find(3).avatar,class: "imgcomment align-self-start mr-3" %> <br />
+	<% if comments[i].user.avatar.attached? == true %>
+	<%= image_tag User.find(comments[i].user.id.to_i).avatar,class: "imgcomment align-self-start mr-3" %> <br />
+	<% else %> 
+	<img src="#" class="imgcomment align-self-start mr-3"> <br />
+	<% end %>
 	<div class="media-body">
 		<h5 class="mt-0"><%= comments[i].user.username %> <small><i><%= time_ago_in_words(comments[i].created_at) %> ago</i></small></h5>
 		<p><%= comments[i].content %></p>
