--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,5 +1,17 @@
+<% if @task.errors.any? %>
+<div class="alert alert-danger">
+  <ul>
+    <% @task.errors.full_messages.each do |msg| %>
+    <li><%= msg %></li>
+    <% end %>
+  </ul>
+</div>
+<% end %>
 <div class="container">
 	<div class="task-form">
+		<h1 class="text-center">
+	      <%= yield(:title) %>
+	    </h1> 
 		<%= form_for @task , html: { multipart: true } do |f| %>
 		<div class="input-group mb-3">
 			<div class="input-group-prepend">
@@ -13,6 +25,9 @@
 				<span class="input-group-text" id="basic-addon1"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></span>
 			</div>
 			<%= f.text_area :content, class: "form-control", placeholder:"Enter description of task"%>
+		</div>
+		<div class="form-group">
+			<%= f.select :level, options_for_select(Task.levels, @task.level), {}, { :class => "form-control" } %>
 		</div>
 		<div class="form-group">
 			<%= f.date_field :date,value: Time.now.strftime("%Y-%m-%d"), class: 'form-control' %>
