--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,3 +1,4 @@
+<div class="container-fluid" style="text-align:center">
 <div class="row">
 	<div class="col-xs-10 col-xs-offset-1">
 		<% flash.each do |name, msg| %>
@@ -7,4 +8,5 @@
 		</div>
 		<% end %>
 	</div>
+</div>
 </div>
