--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">
     <%= link_to raw(image_tag("Vinova_Logo.png", :alt => "rss feed")), tasks_path %>
-      
+
     </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -9,8 +9,17 @@
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav ml-auto">
        <% if logged_in? %>
+    <% if current_user.admin? %>
+       <li class="nav-item active">
+         <%=link_to 'Admin Control', admins_index_path, class: "nav-link ",style: "color:black" %>
+       </li>
+       	<% else%>
         <li class="nav-item active">
-          <%=link_to 'Daily Working', tasks_path, class: "nav-link" %>
+          <a class="dropdown-item" href="404.html.erb"></a>
+        </li>
+        	<% end %>
+        <li class="nav-item active">
+          <%=link_to 'Daily Working', tasks_path, class: "nav-link",style: "color:black" %>
         </li>
         <% if current_user.admin? %>
         <li class="nav-item">
@@ -20,17 +29,18 @@
         <li class="nav-item">
             <%= link_to 'User', users_path, class: "nav-link" %>
         </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Hi! <%= current_user.username %>
+        <li class="nav-item dropdown no-arrow">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Hi! <%= current_user.username %> <i class="fa fa-user-circle fa-fw" style="font-size:1.3rem"></i>
           </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" href="#"></a>
             <%= link_to 'View Profile', user_path(current_user), class: "dropdown-item" %>
             <%= link_to 'Edit your account', edit_user_path(current_user), class: "dropdown-item" %>
             <%= link_to 'Log out', logout_path, method: :delete, class: "dropdown-item" %>
           </div>
         </li>
-     <% end %>
+        <% end %>
     </ul>
   </div>
 </nav>
