--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -59,7 +59,7 @@
     </div>
     <div class="form-group ">
       <div align="center">
-        <%= f.submit(@user.new_record? ? "Sign up" : "Update account", class:"btn btn-lg btn-dark ml-auto") %>
+        <%= f.submit(@user.new_record? ? "Sign up" : "Update account", class:"btn btn-lg btn-dark ml-auto btn-user") %>
       </div>
     </div>
     <% end %>
