--- a/app/views/admins/user.html.erb
+++ b/app/views/admins/user.html.erb
@@ -10,7 +10,7 @@
         <h6>Export List of Users</h6>
         <div class="pb-4">
     <%= link_to "CSV", users_render_path(format: "csv"),type: "button",class:"btn btn-outline-success" %>
-    <%= link_to "Excel", users_render_path(format: "xls"),type: "button",class:"btn btn-outline-primary" %>
+    <%= link_to "Excel", users_render_pathrender_path(format: "xls"),type: "button",class:"btn btn-outline-primary" %>
     <br/>
     </div>
         <!-- DataTables Example -->
