--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,10 +1,29 @@
+
+
+
+
+
+
+
 <div class="container pt-4">
 	<div class="row">
-		<div class="col-lg-6 col-md-12 col-sm-12 m-auto">
-			<div align="center">
-				<% @task.images.each do |image| %>
-				<%= image_tag image ,class: "imgtask" %> <br />
-				<% end %>
+		<div class="col-lg-12 col-md-12 col-sm-12 m-auto">
+			<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+			  <div class="carousel-inner">
+			  	<% @task.images.each_with_index do |image, index| %>
+				    <div class="carousel-item <%= index == 0 ? 'active' : '' %> ">
+				    	<%= image_tag image ,class: "d-block w-100" %> <br />
+				    </div>
+			    <% end %>
+			  </div>
+			  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+			    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			    <span class="sr-only">Previous</span>
+			  </a>
+			  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+			    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+			    <span class="sr-only">Next</span>
+			  </a>
 			</div>
 			<center class="pt-2">
 			<b><%= @task.taskname %></b>
@@ -25,16 +44,24 @@
 			data: { confirm: "Are you sure you want to delete the task?"}, 														class: "btn btn-lg btn-danger fa fa-trash" %>
 			<%= link_to "", tasks_path, class: "btn btn-lg btn-success fa fa-arrow-circle-left" %>
 			<% end %>
+			<br/>
 			<% if @task.status == "notstarted" %>
-			<%= link_to "", change_status_path(:task => @task, :status => "inprogress"), method: :put, data: {dismiss: "alert", confirm: "Are you sure to receive this task?"},class: "btn btn-warning fa fa-thumb-tack"
-			%>
-			<% elsif @task.status == "inprogress" %>
-			<%= link_to "", change_status_path(:task => @task, :status => "done"), method: :put, data: {dismiss: "alert", confirm: "Do you complete your task?"},class: "btn btn-warning fa fa-check-circle-o"
-			%>
-			<% else %>
-			<button type="button" class="btn btn-warning" disabled><span class="fa fa-thumb-tack"></span>
-			</button>
-			<% end %>
+									<% if  @task.users.find_by(id: current_user.id) || @task.users.count == 0 %>
+									 <%= link_to "", change_status_path(:task => @task, :status => "inprogress"), method: :put, data: {dismiss: "alert", confirm: "Are you sure to receive this task?"},class: "btn btn-warning fa fa-thumb-tack"
+		    						 %>
+		    						 <% else %>
+		    						 <button type="button" class="btn btn-warning" disabled><span class="fa fa-thumb-tack"></span>
+										</button>
+		    						 <% end %>
+								<% else %>
+									<% if @task.status == "inprogress" %>
+									<%= link_to "", change_status_path(:task => @task, :status => "done"), method: :put, data: {dismiss: "alert", confirm: "Do you complete your task?"},class: "btn btn-warning fa fa-check-circle-o"
+		    						 %>
+									<% else %>
+										<button type="button" class="btn btn-warning" disabled><span class="fa fa-thumb-tack"></span>
+										</button>
+									<% end %>
+								<% end %>
 			
 			</center>
 		</div>
